k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pm-ingress
  namespace: tfg-app
  annotations:
    kubernetes.io/ingress.class: "gce"  
    networking.gke.io/managed-certificates: "pm-cert"
spec:
  rules:
    - host: console.project-management-tool.tech
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 80
